Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33554

Android: Compile fails in multimedia on x86

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.2.0
    • 5.2.0
    • Multimedia
    • None
    • Android
    • 17480111ed3e98c3d10c2fb9590c3c487e3e952c

    Description

      When compiling QtMultimedia for x86 on Android, you get the following error messages:

      08:55:09 mediacapture/qandroidcamerafocuscontrol.cpp: In member function 'void QAndroidCameraFocusControl::updateFocusZones(QCameraFocusZone::FocusZoneStatus)':
      08:55:09 mediacapture/qandroidcamerafocuscontrol.cpp:244:45: error: no matching function for call to 'qBound(float, qreal, qreal)'
      08:55:09                       1.f - focusSize.width());
      08:55:10                                              ^
      08:55:10 mediacapture/qandroidcamerafocuscontrol.cpp:244:45: note: candidate is:
      08:55:10 In file included from /work/build/qt5_workdir/w/s/qtbase/include/QtCore/qglobal.h:1:0,
      08:55:10                  from ../../../../include/QtMultimedia/../../src/multimedia/qtmultimediadefs.h:56,
      08:55:10                  from ../../../../include/QtMultimedia/qtmultimediadefs.h:1,
      08:55:11                  from ../../../../include/QtMultimedia/../../src/multimedia/qmediacontrol.h:45,
      08:55:11                  from ../../../../include/QtMultimedia/qmediacontrol.h:1,
      08:55:12                  from ../../../../include/QtMultimedia/../../src/multimedia/controls/qcamerafocuscontrol.h:45,
      08:55:12                  from ../../../../include/QtMultimedia/qcamerafocuscontrol.h:1,
      08:55:12                  from mediacapture/qandroidcamerafocuscontrol.h:45,
      08:55:12                  from mediacapture/qandroidcamerafocuscontrol.cpp:42:
      08:55:12 /work/build/qt5_workdir/w/s/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:517:34: note: template<class T> constexpr const T& qBound(const T&, const T&, const T&)
      08:55:12  Q_DECL_CONSTEXPR inline const T &qBound(const T &min, const T &val, const T &max)
      08:55:12                                   ^
      08:55:12 /work/build/qt5_workdir/w/s/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:517:34: note:   template argument deduction/substitution failed:
      08:55:12 mediacapture/qandroidcamerafocuscontrol.cpp:244:45: note:   deduced conflicting types for parameter 'const T' ('float' and 'qreal {aka double}')
      08:55:12                       1.f - focusSize.width());
      08:55:13                                              ^
      08:55:13 mediacapture/qandroidcamerafocuscontrol.cpp:247:46: error: no matching function for call to 'qBound(float, qreal, qreal)'
      08:55:13                       1.f - focusSize.height());
      08:55:13                                               ^
      08:55:13 mediacapture/qandroidcamerafocuscontrol.cpp:247:46: note: candidate is:
      08:55:13 In file included from /work/build/qt5_workdir/w/s/qtbase/include/QtCore/qglobal.h:1:0,
      08:55:13                  from ../../../../include/QtMultimedia/../../src/multimedia/qtmultimediadefs.h:56,
      08:55:13                  from ../../../../include/QtMultimedia/qtmultimediadefs.h:1,
      08:55:13                  from ../../../../include/QtMultimedia/../../src/multimedia/qmediacontrol.h:45,
      08:55:13                  from ../../../../include/QtMultimedia/qmediacontrol.h:1,
      08:55:13                  from ../../../../include/QtMultimedia/../../src/multimedia/controls/qcamerafocuscontrol.h:45,
      08:55:13                  from ../../../../include/QtMultimedia/qcamerafocuscontrol.h:1,
      08:55:13                  from mediacapture/qandroidcamerafocuscontrol.h:45,
      08:55:13                  from mediacapture/qandroidcamerafocuscontrol.cpp:42:
      08:55:13 /work/build/qt5_workdir/w/s/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:517:34: note: template<class T> constexpr const T& qBound(const T&, const T&, const T&)
      08:55:13  Q_DECL_CONSTEXPR inline const T &qBound(const T &min, const T &val, const T &max)
      08:55:13                                   ^
      08:55:13 /work/build/qt5_workdir/w/s/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:517:34: note:   template argument deduction/substitution failed:
      08:55:13 mediacapture/qandroidcamerafocuscontrol.cpp:247:46: note:   deduced conflicting types for parameter 'const T' ('float' and 'qreal {aka double}')
      08:55:13                       1.f - focusSize.height());
      08:55:13
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes